--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="container">
         <div class="flex flex-wrap">
           <div class="w-full self-center px-4 lg:w-1/2">
-            <h1 class="text-base font-semibold text-primary md:text-xl">Halo Semua 👋,Saya <span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl">Jonandes Anthony Sinaga</span></h1>
+            <h1 class="text-base font-semibold text-primary md:text-xl">Halo Semua‹,Saya <span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl">Jonandes Anthony Sinaga</span></h1>
             <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">Student & <span class="text-dark">Web Developer</span></h2>
             <p class="font-medium text-secondary mb-10 leading-relaxed">Belajar tidak membuat mu bodoh,tapi belajar adalah cara untuk membuat masa depan mu cerah,<span class="text-dark font-bold">semangat!</span></p>
 
@@ -83,7 +83,7 @@
         <div class="flex flex-wrap">
           <div class="w-full px-4 mb-10 lg:w-1/2">
             <h4 class="font-bold uppercase text-primary text-lg mb-3">Tentang Saya</h4>
-            <h2 class="font-bold text-secondary text-3xl mb-5 max-w-md lg:text-4xl">Ayo, belajar web progaraming bersama saya!</h2>
+            <h2 class="font-bold text-secondary text-3xl mb-5 max-w-md lg:text-4xl">Ayo, belajar web programming bersama saya!</h2>
             <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident totam, aspernatur dolore similique molestias deleniti quo!</p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
@@ -91,7 +91,7 @@
             <p class="font-medium text-base text-secondary mb-6 lg:text-lg">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit quidem placeat sint reiciendis, tenetur illum harum excepturi nesciunt.</p>
             <div class="flex item-center">
               <!-- youtube -->
-              <a class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white text-slate-300" href="#" target="_blank">
+              <a class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white text-slate-300" href="https://www.youtube.com/channel/UCzG9lsQoliABEVNpWpavE4A" target="_blank">
                 <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                   <title>YouTube</title>
                   <path
@@ -100,7 +100,7 @@
                 </svg>
               </a>
               <!-- instagram -->
-              <a class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white text-slate-300" href="#" target="_blank">
+              <a class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white text-slate-300" href="https://www.instagram.com/ngjay204/?hl=id" target="_blank">
                 <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                   <title>Instagram</title>
                   <path
@@ -109,7 +109,7 @@
                 </svg>
               </a>
               <!-- tik tok -->
-              <a class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white text-slate-300" href="#" target="_blank">
+              <a class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white text-slate-300" href="https://vm.tiktok.com/ZSRXNk7sH/" target="_blank">
                 <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                   <title>TikTok</title>
                   <path
@@ -125,7 +125,7 @@
     <!-- about section end -->
 
     <!-- portfolio Section Start -->
-    <section id="clients" class="pt-36 pb-32 bg-slate-100">
+    <section id="portfolio" class="pt-36 pb-32 bg-slate-100">
       <div class="container">
         <div class="w-full px-4">
           <div class="max-w-xl mx-auto text-center mb-16">
@@ -222,7 +222,7 @@
           <div class="container">
             <div class="w-full px-4">
               <div class="max-w-xl mx-auto text-center mb-16">
-                <h4 class="font-semi-bold text-lg text-primary mb-2">contact</h4>
+                <h4 class="font-semi-bold text-lg text-primary mb-2">Contact</h4>
                 <h2 class="font-bold text-dark txt-3xl mv=b-4">Hubungi Kami</h2>
                 <p class="font-medium text-md text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam vitae illo sunt possimus.</p>
               </div>
